--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -1,9 +1,11 @@
+version: '3.8'
+
 services:
   nextcloud-db:
-    image: mariadb:10.11
+    image: mariadb:11.0
     container_name: nextcloud-db
     restart: unless-stopped
-    command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW --innodb-file-per-table=1 --skip-innodb-read-only-compressed
+    command: --transaction-isolation=READ-COMMITTED --log-bin=binlog --binlog-format=ROW
     volumes:
       - db_data:/var/lib/mysql
     environment:
@@ -12,14 +14,6 @@ services:
       - MYSQL_DATABASE=nextcloud
       - MYSQL_USER=nextcloud
       - MYSQL_INITDB_SKIP_TZINFO=1
-    networks:
-      - nextcloud
-
-  nextcloud-redis:
-    image: redis:alpine
-    container_name: nextcloud-redis
-    restart: unless-stopped
-    command: redis-server --requirepass ${REDIS_PASSWORD} --save 60 1 --loglevel warning
     networks:
       - nextcloud
 
@@ -38,8 +32,9 @@ services:
       - MYSQL_DATABASE=nextcloud
       - MYSQL_USER=nextcloud
       - MYSQL_HOST=nextcloud-db
-      - REDIS_HOST=nextcloud-redis
-      - REDIS_HOST_PASSWORD=${REDIS_PASSWORD}
+      - REDIS_HOST=shared_redis
+      - REDIS_HOST_PASSWORD=${SHARED_REDIS_PASSWORD}
+      - REDIS_HOST_PORT=6379
       - NEXTCLOUD_ADMIN_PASSWORD=${NEXTCLOUD_ADMIN_PASSWORD}
       - NEXTCLOUD_ADMIN_USER=${NEXTCLOUD_ADMIN_USER}
       - NEXTCLOUD_TRUSTED_DOMAINS=cloud.${DOMAIN}
@@ -50,10 +45,10 @@ services:
       - TRUSTED_PROXIES=172.16.0.0/12
     depends_on:
       - nextcloud-db
-      - nextcloud-redis
     networks:
       - nextcloud
       - traefik
+      - shared-services
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.nextcloud.rule=Host(`cloud.${DOMAIN:-localhost}`)"
@@ -61,23 +56,26 @@ services:
       - "traefik.http.routers.nextcloud.tls.certresolver=letsencrypt"
       - "traefik.http.services.nextcloud.loadbalancer.server.port=80"
       # Enhanced Nextcloud security middleware
-      - "traefik.http.routers.nextcloud.middlewares=nextcloud-security"
-      - "traefik.http.middlewares.nextcloud-security.chain.middlewares=secure-headers,nextcloud-headers,rate-limit"
+      - "traefik.http.middlewares.nextcloud-caldav.redirectregex.regex=^https://(.*)/.well-known/(card|cal)dav"
+      - "traefik.http.middlewares.nextcloud-caldav.redirectregex.replacement=https://$$1/remote.php/dav/"
+      - "traefik.http.middlewares.nextcloud-caldav.redirectregex.permanent=true"
       - "traefik.http.middlewares.nextcloud-headers.headers.customFrameOptionsValue=SAMEORIGIN"
-      - "traefik.http.middlewares.nextcloud-headers.headers.contentSecurityPolicy=default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; font-src 'self' data:; img-src 'self' data: blob:; connect-src 'self'; media-src 'self'"
-      - "traefik.http.middlewares.nextcloud-headers.headers.stsSeconds=31536000"
-      - "traefik.http.middlewares.nextcloud-headers.headers.stsIncludeSubdomains=true"
-      - "traefik.http.middlewares.nextcloud-headers.headers.stsPreload=true"
-      - "traefik.http.middlewares.nextcloud-headers.headers.forceSTSHeader=true"
-    env_file:
-      - .env
+      - "traefik.http.middlewares.nextcloud-headers.headers.customResponseHeaders.Referrer-Policy=no-referrer"
+      - "traefik.http.middlewares.nextcloud-headers.headers.customResponseHeaders.X-Content-Type-Options=nosniff"
+      - "traefik.http.middlewares.nextcloud-headers.headers.customResponseHeaders.X-Frame-Options=DENY"
+      - "traefik.http.middlewares.nextcloud-headers.headers.customResponseHeaders.X-Permitted-Cross-Domain-Policies=none"
+      - "traefik.http.middlewares.nextcloud-headers.headers.customResponseHeaders.X-Robots-Tag=noindex,nofollow"
+      - "traefik.http.middlewares.nextcloud-headers.headers.customResponseHeaders.X-XSS-Protection=1; mode=block"
+      - "traefik.http.routers.nextcloud.middlewares=nextcloud-caldav,nextcloud-headers"
+
+volumes:
+  nextcloud_data:
+  db_data:
 
 networks:
   nextcloud:
     driver: bridge
   traefik:
     external: true
-
-volumes:
-  db_data:
-  nextcloud_data:
+  shared-services:
+    external: true
