--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -1,22 +1,6 @@
 version: '3.8'
 
 services:
-  nextcloud-db:
-    image: mariadb:11.0
-    container_name: nextcloud-db
-    restart: unless-stopped
-    command: --transaction-isolation=READ-COMMITTED --log-bin=binlog --binlog-format=ROW
-    volumes:
-      - db_data:/var/lib/mysql
-    environment:
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-      - MYSQL_DATABASE=nextcloud
-      - MYSQL_USER=nextcloud
-      - MYSQL_INITDB_SKIP_TZINFO=1
-    networks:
-      - nextcloud
-
   nextcloud-app:
     image: nextcloud:apache
     container_name: nextcloud-app
@@ -28,13 +12,16 @@ services:
       - ./data:/var/www/html/data
       - ./themes:/var/www/html/themes
     environment:
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-      - MYSQL_DATABASE=nextcloud
-      - MYSQL_USER=nextcloud
-      - MYSQL_HOST=nextcloud-db
+      # PostgreSQL Configuration
+      - POSTGRES_DB=nextcloud
+      - POSTGRES_USER=nextcloud_user
+      - POSTGRES_PASSWORD=${SHARED_POSTGRES_PASSWORD}
+      - POSTGRES_HOST=shared_postgres
+      # Redis Configuration
       - REDIS_HOST=shared_redis
       - REDIS_HOST_PASSWORD=${SHARED_REDIS_PASSWORD}
       - REDIS_HOST_PORT=6379
+      # Nextcloud Configuration
       - NEXTCLOUD_ADMIN_PASSWORD=${NEXTCLOUD_ADMIN_PASSWORD}
       - NEXTCLOUD_ADMIN_USER=${NEXTCLOUD_ADMIN_USER}
       - NEXTCLOUD_TRUSTED_DOMAINS=cloud.${DOMAIN}
@@ -43,8 +30,6 @@ services:
       - OVERWRITEHOST=cloud.${DOMAIN}
       - APACHE_DISABLE_REWRITE_IP=1
       - TRUSTED_PROXIES=172.16.0.0/12
-    depends_on:
-      - nextcloud-db
     networks:
       - nextcloud
       - traefik
@@ -70,7 +55,6 @@ services:
 
 volumes:
   nextcloud_data:
-  db_data:
 
 networks:
   nextcloud:
